Add RecordComponent